--- a/css/finalx.css
+++ b/css/finalx.css
@@ -1,4 +1,8 @@
 body
 {
-    color:red;
+    color:plum ;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+
+
 }
